k8s/petclinic.yml
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: petclinic

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: workload
          image: ghcr.io/tunisterk/spring-petclinic:ef9f5bf65e992961fba5ca5d98a59f0c76be7938

          ports:
            - name: http
              containerPort: 8080

          livenessProbe:
            httpGet:
              path: /livez
              port: http

          readinessProbe:
            httpGet:
              path: /readyz
              port: http

          volumeMounts:
            - mountPath: /bindings/secret
              name: binding
              readOnly: true

      volumes:
        - name: binding
          projected:
            sources:
              - secret:
                  name: demo-db
